Authenticate Gravity C13-C14-B1 lowering packet